--- a/module/manifest.json
+++ b/module/manifest.json
@@ -1,8 +1,8 @@
 {
-    "changes": "* Set correct orientation when app is running on iOS8", 
-    "description": "Display notifications to your users.\n\nThe notification module gives access to various native features to alert the user, as well as show natively style alert, prompt and confirm dialogs.", 
-    "min_platform_version": "v2.2.0", 
-    "namespace": "notification", 
-    "platform_version": "v2.2.0", 
+    "changes": "* Updated for iOS 11\n* Updated for Android 25.",
+    "description": "Display notifications to your users.\n\nThe notification module gives access to various native features to alert the user, as well as show natively style alert, prompt and confirm dialogs.",
+    "min_platform_version": "v2.6.1",
+    "namespace": "notification",
+    "platform_version": "feature_ios11",
     "version": "2.7"
 }
